--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "printWidth": 80
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "classnames": "^2.3.2",
     "next": "12.3.1",
     "react": "18.2.0",
